// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The replace serializer should provide a helper to return the child of an element only 1`] = `
<WrapperComponent>
  <tc-view__TcView>
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "tc-view__TcView-nuazoi-0",
            "isStatic": true,
            "lastClassName": "fPjBcr",
            "rules": Array [
              "border:0px solid black;box-sizing:border-box;display:flex;flex-direction:column;margin:0px;min-height:0px;min-width:0px;padding:0px;position:relative;z-index:0;",
            ],
          },
          "displayName": "tc-view__TcView",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "tc-view__TcView-nuazoi-0",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <div
        className="tc-view__TcView-nuazoi-0 fPjBcr"
      >
        <tc-text__TcText>
          <StyledComponent
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "tc-text__TcText-sc-15igzev-0",
                  "isStatic": true,
                  "lastClassName": "kwFxdN",
                  "rules": Array [
                    "border:0px solid black;box-sizing:border-box;color:rgb(0,0,0);display:inline;font-size:14px;font-family:sans-serif;margin:0px;padding:0px;white-space:pre-wrap;overflow-wrap:break-word;",
                  ],
                },
                "displayName": "tc-text__TcText",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "tc-text__TcText-sc-15igzev-0",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <div
              className="tc-text__TcText-sc-15igzev-0 kwFxdN"
            >
              Hello world!
            </div>
          </StyledComponent>
        </tc-text__TcText>
      </div>
    </StyledComponent>
  </tc-view__TcView>
</WrapperComponent>
`;

exports[`The replace serializer should provide a helper to return the children of an element only 1`] = `
<tc-view__TcView>
  <StyledComponent
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "tc-view__TcView-nuazoi-0",
          "isStatic": true,
          "lastClassName": "fPjBcr",
          "rules": Array [
            "border:0px solid black;box-sizing:border-box;display:flex;flex-direction:column;margin:0px;min-height:0px;min-width:0px;padding:0px;position:relative;z-index:0;",
          ],
        },
        "displayName": "tc-view__TcView",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "tc-view__TcView-nuazoi-0",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
  >
    <ChildComponent
      text="Hello world1!"
    >
      <tc-text__TcText>
        <StyledComponent
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "tc-text__TcText-sc-15igzev-0",
                "isStatic": true,
                "lastClassName": "kwFxdN",
                "rules": Array [
                  "border:0px solid black;box-sizing:border-box;color:rgb(0,0,0);display:inline;font-size:14px;font-family:sans-serif;margin:0px;padding:0px;white-space:pre-wrap;overflow-wrap:break-word;",
                ],
              },
              "displayName": "tc-text__TcText",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "tc-text__TcText-sc-15igzev-0",
              "target": "div",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
        >
          Hello world1!
        </StyledComponent>
      </tc-text__TcText>
    </ChildComponent>
    <ChildComponent
      text="Hello world2!"
    >
      <tc-text__TcText>
        <StyledComponent
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "tc-text__TcText-sc-15igzev-0",
                "isStatic": true,
                "lastClassName": "kwFxdN",
                "rules": Array [
                  "border:0px solid black;box-sizing:border-box;color:rgb(0,0,0);display:inline;font-size:14px;font-family:sans-serif;margin:0px;padding:0px;white-space:pre-wrap;overflow-wrap:break-word;",
                ],
              },
              "displayName": "tc-text__TcText",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "tc-text__TcText-sc-15igzev-0",
              "target": "div",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
        >
          Hello world2!
        </StyledComponent>
      </tc-text__TcText>
    </ChildComponent>
    <ChildComponent
      text="Hello world3!"
    >
      <tc-text__TcText>
        <StyledComponent
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "tc-text__TcText-sc-15igzev-0",
                "isStatic": true,
                "lastClassName": "kwFxdN",
                "rules": Array [
                  "border:0px solid black;box-sizing:border-box;color:rgb(0,0,0);display:inline;font-size:14px;font-family:sans-serif;margin:0px;padding:0px;white-space:pre-wrap;overflow-wrap:break-word;",
                ],
              },
              "displayName": "tc-text__TcText",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "tc-text__TcText-sc-15igzev-0",
              "target": "div",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
        >
          Hello world3!
        </StyledComponent>
      </tc-text__TcText>
    </ChildComponent>
  </StyledComponent>
</tc-view__TcView>
`;

exports[`The replace serializer should provide a helper to return the component with props and no children 1`] = `
<WrapperComponent>
  <tc-view__TcView>
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "tc-view__TcView-nuazoi-0",
            "isStatic": true,
            "lastClassName": "fPjBcr",
            "rules": Array [
              "border:0px solid black;box-sizing:border-box;display:flex;flex-direction:column;margin:0px;min-height:0px;min-width:0px;padding:0px;position:relative;z-index:0;",
            ],
          },
          "displayName": "tc-view__TcView",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "tc-view__TcView-nuazoi-0",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <div
        className="tc-view__TcView-nuazoi-0 fPjBcr"
      >
        <ChildComponent
          text="Hello world!"
        />
      </div>
    </StyledComponent>
  </tc-view__TcView>
</WrapperComponent>
`;

exports[`The replace serializer should replace the expected component 1`] = `
<WrapperComponent>
  <tc-view__TcView>
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "tc-view__TcView-nuazoi-0",
            "isStatic": true,
            "lastClassName": "fPjBcr",
            "rules": Array [
              "border:0px solid black;box-sizing:border-box;display:flex;flex-direction:column;margin:0px;min-height:0px;min-width:0px;padding:0px;position:relative;z-index:0;",
            ],
          },
          "displayName": "tc-view__TcView",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "tc-view__TcView-nuazoi-0",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <div
        className="tc-view__TcView-nuazoi-0 fPjBcr"
      >
        <Placeholder>
          <ForwardRef(tc-text__TcText)>
            Replaced
          </ForwardRef(tc-text__TcText)>
        </Placeholder>
      </div>
    </StyledComponent>
  </tc-view__TcView>
</WrapperComponent>
`;

exports[`The replace serializer should replace the expected component completely 1`] = `
<WrapperComponent>
  <tc-view__TcView>
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "tc-view__TcView-nuazoi-0",
            "isStatic": true,
            "lastClassName": "fPjBcr",
            "rules": Array [
              "border:0px solid black;box-sizing:border-box;display:flex;flex-direction:column;margin:0px;min-height:0px;min-width:0px;padding:0px;position:relative;z-index:0;",
            ],
          },
          "displayName": "tc-view__TcView",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "tc-view__TcView-nuazoi-0",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <div
        className="tc-view__TcView-nuazoi-0 fPjBcr"
      />
    </StyledComponent>
  </tc-view__TcView>
</WrapperComponent>
`;
